--- a/packages/data-designer/pyproject.toml
+++ b/packages/data-designer/pyproject.toml
@@ -42,7 +42,7 @@ raw-options = { root = "../.." }
 version-file = "src/data_designer/interface/_version.py"
 
 [tool.hatch.metadata.hooks.custom]
-path = "hatch_build.py"
+path = "dev-tools/hatch_build.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/data_designer"]
