--- a/packages/data-designer-config/pyproject.toml
+++ b/packages/data-designer-config/pyproject.toml
@@ -48,5 +48,10 @@ packages = ["src/data_designer"]
 [tool.ruff]
 extend = "../../pyproject.toml"
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+asyncio_default_fixture_loop_scope = "session"
+env = ["DISABLE_DATA_DESIGNER_PLUGINS=true"]
+
 [tool.uv]
 package = true
