--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -6,7 +6,7 @@ authors:
   dcorneil:
     name: Dane Corneil
     description: Researcher at NVIDIA
-    avatar: https://avatars.githubusercontent.com/u/1728152?s=200&v=4
+    avatar: https://avatars.githubusercontent.com/u/4678597?v=4
   etramel:
     name: Eric Tramel
     description: Researcher at NVIDIA
