--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -10,4 +10,4 @@ authors:
   etramel:
     name: Eric Tramel
     description: Researcher at NVIDIA
-    avatar: https://avatars.githubusercontent.com/u/1728152?s=200&v=4
+    avatar: https://avatars.githubusercontent.com/u/1223539?v=4
