chore: make health checks non-blocking in CI

--- a/.github/workflows/health-checks.yml
+++ b/.github/workflows/health-checks.yml
@@ -33,4 +33,5 @@ jobs:
       - name: Run health checks
         env:
           OPENAI_API_KEY: ${{ secrets.TEST_OPENAI_API_KEY }}
+        continue-on-error: true
         run: make health-checks
