--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -11,3 +11,7 @@ authors:
     name: Eric Tramel
     description: Researcher at NVIDIA
     avatar: https://avatars.githubusercontent.com/u/1223539?v=4
+  kthadaka:
+    name: Kirit Thadaka
+    description: Product Manager at NVIDIA
+    avatar: https://avatars.githubusercontent.com/u/8190572?v=4
