--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,8 @@ nav:
       - Structured Outputs and Jinja Expressions: notebooks/2-structured-outputs-and-jinja-expressions.ipynb
       - Seeding with an External Dataset: notebooks/3-seeding-with-a-dataset.ipynb
       - Providing Images as Context: notebooks/4-providing-images-as-context.ipynb
+      - Generating Images: notebooks/5-generating-images.ipynb
+      - Image-to-Image Editing: notebooks/6-editing-images-with-image-context.ipynb
   - Recipes:
       - Recipe Cards: recipes/cards.md
       - Code Generation:
