--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,9 @@ NOTEPAD.md
 
 # Build-time copy of README for data-designer package (copied from top-level during build)
 packages/data-designer/README.md
+
+# Cerebro knowledge base
+.cerebro/
+.cursor/rules/cerebro.mdc
+.cursor/mcp.json
+.claude/rules/cerebro.md
