--- a/fern/docs.yml
+++ b/fern/docs.yml
@@ -11,21 +11,39 @@ versions:
     path: versions/v0.3.3.yml
     slug: v0.3.3
 
+footer: ./components/CustomFooter.tsx
+
+layout:
+  searchbar-placement: header
+  page-width: 1376px
+  sidebar-width: 248px
+  content-width: 812px
+  tabs-placement: header
+  hide-feedback: true
+
 colors:
-  accent-primary:
+  accentPrimary:
     dark: "#76B900"
-    light: "#4a7300"
+    light: "#76B900"
   background:
-    dark: "#1a1a1a"
-    light: "#ffffff"
+    light: "#FFFFFF"
+    dark: "#000000"
+
+theme:
+  page-actions: toolbar
+  footer-nav: minimal
 
 logo:
-  dark: assets/favicon.png
-  light: assets/favicon.png
+  dark: ./assets/NVIDIA_dark.svg
+  light: ./assets/NVIDIA_light.svg
+  height: 20
+  href: /
+  right-text: Data Designer
 
-favicon: assets/favicon.png
+favicon: ./assets/NVIDIA_symbol.svg
 
 css:
+  - ./main.css
   - ./styles/notebook-viewer.css
   - ./styles/trajectory-viewer.css
   - ./styles/expandable-code.css
