--- a/docs/devnotes/.authors.yml
+++ b/docs/devnotes/.authors.yml
@@ -18,4 +18,4 @@ authors:
   dnathawani:
     name: Dhruv Nathawani
     description: Researcher at NVIDIA
-    avatar: https://avatars.githubusercontent.com/u/dnathawani?v=4
+    avatar: https://avatars.githubusercontent.com/u/128275431?v=4
