docs: add structured outputs SDG dev notes (#338)
* devnotes: add structured outputs SDG blog post

* Add author

* Add author

* Add author

* docs: add benchmark links, clean up flowchart, remove em dashes

* docs: add collapsible demo script, use default DD config, clean up formatting

* docs: update baseline error rate, remove specific percentage targets

* docs: widen ASCII pipeline diagram, update baseline error rate

* docs: reduce heading levels per review feedback

* docs: add note on extending demo to YAML/XML formats

* docs: clarify baseline error rate range (20-35% depending on benchmark)

* docs: increase diagram spacing

* Update typo

Co-authored-by: greptile-apps[bot] <165735046+greptile-apps[bot]@users.noreply.github.com>

* docs: use dd.SamplingStrategy instead of explicit import

---------

Co-authored-by: greptile-apps[bot] <165735046+greptile-apps[bot]@users.noreply.github.com>

--- a/docs/devnotes/.authors.yml
+++ b/docs/devnotes/.authors.yml
@@ -15,3 +15,7 @@ authors:
     name: Kirit Thadaka
     description: Product Manager at NVIDIA
     avatar: https://avatars.githubusercontent.com/u/8190572?v=4
+  dnathawani:
+    name: Dhruv Nathawani
+    description: Researcher at NVIDIA
+    avatar: https://avatars.githubusercontent.com/u/128275431?v=4
