Added starter dev notes on push to huggingface hub

--- a/docs/devnotes/.authors.yml
+++ b/docs/devnotes/.authors.yml
@@ -19,3 +19,7 @@ authors:
     name: Dhruv Nathawani
     description: Researcher at NVIDIA
     avatar: https://avatars.githubusercontent.com/u/128275431?v=4
+  nmulepati:
+    name: Nabin Mulepati
+    description: Researcher at NVIDIA
+    avatar: https://avatars.githubusercontent.com/u/5551931?v=4
