--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,7 @@ nav:
       - Design Principles: devnotes/posts/design-principles.md
       - RQA Dataset: devnotes/posts/rqa.md
       - Deep Research Trajectories: devnotes/posts/deep-research-trajectories.md
+      - Prompt Sensitivity: devnotes/posts/prompt-sensitivity.md
 
 theme:
   name: material
